# python_filename_linter

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
python_filename_linter/: main.py  test_to_snake_case.py
test_python_filename_linter/: test_to_snake_case.py
